feat: Enhance NASDAQ Public API Client with comprehensive features, improved error handling, and CLI support

--- a/.qwen/settings.json
+++ b/.qwen/settings.json
@@ -2,7 +2,7 @@
   "autoAccept": true,
   "theme": "GitHub",
   "usageStatisticsEnabled": false,
-  "contextFileName": "AGENTS.md",
+  "contextFileName": "AGENTS.MD",
   "telemetry": {
     "enabled": false,
     "logPrompts": false
