--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,26 @@ version = "0.1.0"
 description = "Minimal Nasdaq public API client for accessing market data. Automates cookie management and data retrieval."
 readme = "README.md"
 requires-python = ">=3.12"
+license = {file = "LICENSE"}
+authors = [
+  {name = "r-bit-rry", email = "34023431+r-bit-rry@users.noreply.github.com"},
+]
+keywords = ["nasdaq", "finance", "stocks", "market-data", "api-client"]
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
+  "Intended Audience :: Financial and Insurance Industry",
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.12",
+  "Topic :: Office/Business :: Financial :: Investment",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+]
 dependencies = [
     "pandas",
     "selenium",
-    "diskcache",
+    # "diskcache",
     "requests",
-
 ]
 
 [project.optional-dependencies]
@@ -24,6 +38,14 @@ dev = [
     "pylint-pydantic>=0.3.5",
     "pylint-mccabe>=0.1.3",
 ]
+
+[project.urls]
+Homepage = "https://github.com/r-bity-rry/nasdaq-public-api"
+Repository = "https://github.com/r-bit-rry/nasdaq-public-api"
+Issues = "https://github.com/r-bit-rry/nasdaq-public-api/issues"
+
+[project.scripts]
+nasdaq-cli = "src.cli:main"
 
 [tool.black]
 line-length = 120
@@ -54,7 +76,7 @@ exclude = ["build", "dist", ".venv", "__pycache__", "*.pyc", "*.egg-info", ".myp
 
 [tool.ruff.lint.isort]
 force-single-line = true
-known-first-party = ["ari_system"]
+known-first-party = ["src"]
 combine-as-imports = true
 lines-after-imports = 2
 
@@ -83,7 +105,7 @@ exclude = ["tests/", "scripts/", ".venv/"]
 
 [tool.coverage.run]
 branch = true
-source = ["ari_system"]
+source = ["src"]
 
 [tool.coverage.report]
 show_missing = true
